--- a/html/PowerPivot.html
+++ b/html/PowerPivot.html
@@ -3,14 +3,14 @@
 <head lang="en-gb">
     <meta charset="utf-8">
     <title>PowerPivot</title>
-    <link href="./css/normalize.css" rel="stylesheet" type="text/css">
-    <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <link href="../css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
 <div id="id-container" class="container centre">
 <header>
-    <h1><a href="./Index.html" class="site-header">some excel, some code</a></h1>
+    <h1><a href="../Index.html" class="site-header">some excel, some code</a></h1>
 </header>
 <section class="content">
 
@@ -68,7 +68,7 @@
 <p class="code">
     =[Price]*[Units]
 </p>
-<img src="./images/PowerPivot/020 Sales Column.png" class="centre image-wide10">
+<img src="../images/PowerPivot/020 Sales Column.png" class="centre image-wide10">
 
 <p>
     This formula is a column formula and PowerPivot will apply it to the whole column when you press return.
@@ -208,7 +208,7 @@
 <p class="code">
     =CALCULATE(sum('Sales Table'[Sales]),ALLSELECTED('Sales Table'[Product]))
 </p>
-<img src="./images/PowerPivot/200 Selected Product Measure.png" class="centre image-wide10">
+<img src="../images/PowerPivot/200 Selected Product Measure.png" class="centre image-wide10">
 
 <p>
     Now we can reuse this Sales Selected Products in a new measure Sales Selected Products as %.
@@ -223,9 +223,9 @@
     Excel to
     insert the PowerPivot table.
 </p>
-<img src="./images/PowerPivot/230 Selected Product Percentage.png" class="centre image-wide10">
-<p><a href="./files/PowerPivot.xlsx" class="sidebar-list-item">PowerPivot.xlsx</a></p>
-<p><a href="./html/PowerPivotSlideShow.html" class="sidebar-list-item">PowerPivot Slideshow</a></p>
+<img src="../images/PowerPivot/230 Selected Product Percentage.png" class="centre image-wide10">
+<p><a href="../files/PowerPivot.xlsx" class="sidebar-list-item">PowerPivot.xlsx</a></p>
+<p><a href="./PowerPivotSlideShow.html" class="sidebar-list-item">PowerPivot Slideshow</a></p>
 </div>
 </article>
 </section>
@@ -234,16 +234,16 @@
         <li class="sidebar-categories">
             <h2>Articles</h2>
             <ul class="sidebar-list">
-                <li><a href="./html/ActiveX Data Objects.html" class="sidebar-list-item">ActiveX Data Objects</a></li>
-                <li><a href="./html/Basic Data Validation.html" class="sidebar-list-item">Basic Data Validation</a></li>
-                <li><a href="./html/Pivot Table.html" class="sidebar-list-item">Pivot Table</a></li>
-                <li><a href="./html/PowerPivot.html" class="sidebar-list-item">PowerPivot</a></li>
-                <li><a href="./html/PowerQuery.html" class="sidebar-list-item">PowerQuery</a></li>
-                <li><a href="./html/VBA Arrays.html" class="sidebar-list-item">VBA Arrays</a></li>
-                <li><a href="./html/VBA Error Handling.html" class="sidebar-list-item">VBA Error Handling</a></li>
-                <li><a href="./html/VBA Event Handling.html" class="sidebar-list-item">VBA Event Handling</a></li>
-                <li><a href="./html/VBA Range Object.html" class="sidebar-list-item">VBA Range Object</a></li>
-                <li><a href="./html/VBA User Defined Functions.html" class="sidebar-list-item">VBA User Defined
+                <li><a href="./ActiveX Data Objects.html" class="sidebar-list-item">ActiveX Data Objects</a></li>
+                <li><a href="./Basic Data Validation.html" class="sidebar-list-item">Basic Data Validation</a></li>
+                <li><a href="./Pivot Table.html" class="sidebar-list-item">Pivot Table</a></li>
+                <li><a href="./PowerPivot.html" class="sidebar-list-item">PowerPivot</a></li>
+                <li><a href="./PowerQuery.html" class="sidebar-list-item">PowerQuery</a></li>
+                <li><a href="./VBA Arrays.html" class="sidebar-list-item">VBA Arrays</a></li>
+                <li><a href="./VBA Error Handling.html" class="sidebar-list-item">VBA Error Handling</a></li>
+                <li><a href="./VBA Event Handling.html" class="sidebar-list-item">VBA Event Handling</a></li>
+                <li><a href="./VBA Range Object.html" class="sidebar-list-item">VBA Range Object</a></li>
+                <li><a href="./VBA User Defined Functions.html" class="sidebar-list-item">VBA User Defined
                     Functions</a></li>
             </ul>
         </li>
