--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div id="id-container" class="container centre">
 <header>
-    <h1><a href="./Index.html" class="site-header">some excel, some code</a></h1>
+    <h1><a href="https://kulwinder7.github.io/" class="site-header">some excel, some code</a></h1>
 </header>
 <section class="content">
 
@@ -232,7 +232,7 @@
 <aside class="sidebar">
     <ul class="sidebar-widget">
         <li class="sidebar-categories">
-            <h2>Articles</h2>
+            <h3 class="article-title">Articles</h3>
             <ul class="sidebar-list">
                 <li><a href="./html/ActiveX Data Objects.html" class="sidebar-list-item">ActiveX Data Objects</a></li>
                 <li><a href="./html/Basic Data Validation.html" class="sidebar-list-item">Basic Data Validation</a></li>
@@ -246,6 +246,7 @@
                 <li><a href="./html/VBA User Defined Functions.html" class="sidebar-list-item">VBA User Defined
                     Functions</a></li>
             </ul>
+        <h3><a href="https://www.youtube.com/channel/UCLJx3bEs4zU1XfWQp6nmKvw" class="article-title">Video Channel</a></h3>
         </li>
     </ul>
 </aside>
