--- a/html/VBA Arrays.html
+++ b/html/VBA Arrays.html
@@ -10,7 +10,7 @@
 
 <div id="id-container" class="container centre">
     <header>
-        <h1><a href="../Index.html" class="site-header">some excel, some code</a></h1>
+        <h1><a href="https://kulwinder7.github.io/" class="site-header">some excel, some code</a></h1>
     </header>
     <section class="content">
 
@@ -140,6 +140,7 @@
                     <li><a href="./VBA User Defined Functions.html" class="sidebar-list-item">VBA User Defined
                         Functions</a></li>
                 </ul>
+                <h3><a href="https://www.youtube.com/channel/UCLJx3bEs4zU1XfWQp6nmKvw" class="article-title">Video Channel</a></h3>
             </li>
         </ul>
     </aside>
